; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_log.c_libvlc_logf.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_log.c_libvlc_logf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 (i32, i32, i32*, i8*, i32)* }

@LIBVLC_NOTICE = common dso_local global i32 0, align 4
@LIBVLC_ERROR = common dso_local global i32 0, align 4
@LIBVLC_WARNING = common dso_local global i32 0, align 4
@LIBVLC_DEBUG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32*, i8*, i32)* @libvlc_logf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @libvlc_logf(i8* %0, i32 %1, i32* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %11, align 8
  %14 = load i32, i32* %7, align 4
  switch i32 %14, label %23 [
    i32 129, label %15
    i32 130, label %17
    i32 128, label %19
    i32 131, label %21
  ]

15:                                               ; preds = %5
  %16 = load i32, i32* @LIBVLC_NOTICE, align 4
  store i32 %16, i32* %7, align 4
  br label %23

17:                                               ; preds = %5
  %18 = load i32, i32* @LIBVLC_ERROR, align 4
  store i32 %18, i32* %7, align 4
  br label %23

19:                                               ; preds = %5
  %20 = load i32, i32* @LIBVLC_WARNING, align 4
  store i32 %20, i32* %7, align 4
  br label %23

21:                                               ; preds = %5
  %22 = load i32, i32* @LIBVLC_DEBUG, align 4
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %5, %21, %19, %17, %15
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i32 (i32, i32, i32*, i8*, i32)*, i32 (i32, i32, i32*, i8*, i32)** %26, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* %7, align 4
  %33 = load i32*, i32** %8, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = load i32, i32* %10, align 4
  %36 = call i32 %27(i32 %31, i32 %32, i32* %33, i8* %34, i32 %35)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
